Fix a lot of typos (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -154,7 +154,7 @@ studenti dovrebbero cogliere il significato di istante di tempo, o meglio
            concetto di tempo prolungato, non di istante.
          }
 , e la differenza con intervallo
-di tempo e in secondo luogo il significato di posizione e la differenza con distanza.
+di tempo e in secondo luogo la differenza tra posizione e distanza.
 Tutte e tre le attività si basano sull’utilizzo della fotografia
 \footnote{
           \`E opportuno che il tempo di esposizione per un singolo scatto sia ridotto, al
@@ -171,8 +171,8 @@ di moto a partire dal grafico stesso.
 \subsection{Fotografare nel Tempo}
 
 \begin{itemize}
-\item \textbf{Materiale richiesto:} Smartphone, Fogli di Carta
 \item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Materiale richiesto:} Smartphone, Fogli di Carta
 \end{itemize}
 
 La prima attività proposta consiste nel fotografare diversi moti o situazioni
@@ -199,8 +199,8 @@ posta sul fuoco o episodi di vita quotidiana (Figura \ref{fig:asse_t_pentola}).
 \subsection{Fotografare nello Spazio}
 
 \begin{itemize}
-\item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
 \item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
 \end{itemize}
 
 Come seconda attività viene chiesto di scegliere un punto di partenza su un
@@ -212,7 +212,7 @@ linea presenti una scala, in quanto l’obiettivo del lavoro è comprendere il
 concetto di posizione di un corpo nello spazio e, in modo qualitativo, della
 posizione relativa rispetto ad altri oggetti.
 
-Anche in questo caso occorre che il professore mostri almeno uno più esempi
+Anche in questo caso occorre che il professore mostri almeno uno o più esempi
 (si veda la Figura \ref{fig:asse_s}).
 \begin{figure}[H]
 \centering
@@ -225,12 +225,11 @@ Anche in questo caso occorre che il professore mostri almeno uno più esempi
 \subsection{Fotografarsi nel Tempo e nello Spazio}
 
 \begin{itemize}
-\item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
 \item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Materiale richiesto:} Smartphone, Foglio di Carta
 \end{itemize}
 
-Infine, la terza attività consiste nel ripercorrere (dall'inizio alla fine,
-senza mai tornare indietro) la medesima via della
+Infine, la terza attività consiste nel ripercorrere la medesima via della
 seconda esperienza, scattando dei \emph{selfie} e appuntandosi la lettura di orologio
 corrispondente a ciascuna foto. Viene richiesta una elaborazione grafica in
 analogia a quanto fatto nelle precedenti, senza che l’insegnante ne specifichi
@@ -271,7 +270,7 @@ L’insegnante \emph{in primis} suddivide la classe in gruppi di cinque studenti
           partecipanti.
          }
 e assegna
-ciascun gruppo ad un’aula virtuale differente. La piattaforma utilizzata sarà a
+ciascun gruppo a un’aula virtuale differente. La piattaforma utilizzata sarà a
 discrezione della scuola
 \footnote{
           Una possibilità è la piattaforma Zoom\textsuperscript{\textregistered},
@@ -293,7 +292,7 @@ interpreti la disomogeneità della disposizione delle
 immagini come corrispondente a periodi di tempo di diversa durata tra i diversi
 scatti. Il professore può formalizzare questo concetto utilizzando il termine
 \emph{intervallo di tempo}, lasciando che gli studenti ne diano la definizione.
-Sì osserverà che l’intervallo di tempo sarà dato dalla differenza tra le
+Si osserverà che l’intervallo di tempo sarà dato dalla differenza tra le
 letture di orologio delle due fotografie. Il docente a questo punto può
 domandare se un singolo scatto occupi un intervallo di tempo. Si ritiene che la
 maggior parte degli alunni abbia chiaro che la risposta sia no. La letteratura
@@ -320,7 +319,7 @@ e l’altro con il concetto di \emph{distanza}.
 Per quanto riguarda la terza esperienza è possibile che molti studenti si siano
 trovati in difficoltà nella parte di rappresentazione grafica, in quanto meno
 guidata delle precedenti. Tuttavia, è plausibile che in qualche gruppo di
-lavoro sia emersa almeno l’impossibilità di utilizzare un’unica asse.
+lavoro sia emersa almeno l’impossibilità di utilizzare un unico asse.
 L’attività, infatti, comprendeva due grandezze differenti: tempo e spazio.
 Nel caso nessun componente della classe sia arrivato ad ipotizzare un grafico
 con due assi, che indicano rispettivamente spazio e tempo, allora il professore
@@ -337,7 +336,7 @@ il moto di questo corpo. Il professore sottolinea nuovamente l’esistenza di
 due informazioni, la posizione e il tempo, e che esse siano in relazione tra
 loro. Egli in particolare spiega che esse sono legate dal concetto
 di \emph{legge oraria}:  una relazione che determina la posizione occupata da un
-corpo  in moto (sempre il medesimo; in questa attività, sè stessi) ad un istante
+corpo  in moto (sempre il medesimo; in questa attività, sé stessi) ad un istante
 fissato.
 
 \section{Extend}
@@ -346,18 +345,18 @@ fissato.
 \item \textbf{Materiale:} Computer, Oggetti domestici
 \end{itemize}
 
-In questa fase si proprone un attività mirata ad estendere la consapevolezza
+In questa fase si propone un'attività mirata ad estendere la consapevolezza
 dello studente riguardo ad alcuni concetti presentati precedentemente.
 In particolare si desidera estendere l'idea di posizione, che lo studente ha maturato,
 allo spazio tridimensionale.
 
 L'insegnante chiede a ciascuno studente di scegliere un oggetto nella stanza e di
-spiegare alla classe, con le proprie parole, dove questo eggetto si trovi.
+spiegare alla classe, con le proprie parole, dove questo oggetto si trovi.
 Lo studente potrebbe utilizzare altri oggetti nella stanza come riferimenti spaziali,
 dicendo ad esempio ``L'oggetto si trova accanto alla finestra'', oppure
-``L'oggetto si trova sopra il tavolo''; o forse potrebbe utilizzare sè stesso come
+``L'oggetto si trova sopra il tavolo''; o forse potrebbe utilizzare sé stesso come
 riferimento affermando ``L'oggetto si trova alla mia destra, in alto''.
-A questo punto il docente chiede di scegliere altri due o tre oggetti,
+A questo punto il docente chiede di scegliere altri due o tre oggetti
 e fa la stessa richiesta di localizzazione. Lo studente si renderà
 conto dell'impossibilità di creare nella propria mente un'idea della stanza
 degli altri compagni e della posizione di tutti gli oggetti, senza che
@@ -519,7 +518,7 @@ Viene chiesto agli studenti di ripetere a casa l’attività usando
 nuovi grafici analoghi (si veda l'Appendice \ref{appendix_kine}) e riprendendo
 per ciascuno la propria mano in movimento.
 Nella consegna viene richiesto anche
-di scegliere uno dei grafici e di descrivere per iscritto il moto osservato della
+di scegliere uno dei grafici e di esporre per iscritto il moto osservato della
 propria mano.
 
 \begin{figure}[H]
@@ -549,12 +548,12 @@ procedimento opposto rispetto all’attività precedente. Il professore presenta
 agli studenti dei video che mostrano  alcuni moti della sua mano lungo il bordo
 del tavolo (un minimo di tre) e chiede loro di graficarli. In questo modo
 ciascuno studente può concentrarsi sul moto del proprio corpo, comprendendo più
-approfonditamente la relazione tra il moto della la mano e cosa viene riportato
+approfonditamente la relazione tra il moto della mano e cosa viene riportato
 sul grafico
 \footnote{
           Esempi di moti sono mostrati nei video presso
           \textcolor{blue}{\href{https://github.com/savaroskij/PED1/tree/master/progetto_finale/media/video/kine_videos_2}{questa pagina web}}.
-}
+}.
 In caso fosse possibile lavorare in classe, il moto rappresentato sui grafici
 può essere riprodotto dagli studenti con il proprio corpo, camminando in linea
 retta. Utilizzando un sensore di prossimità, è possibile controllare in
@@ -614,7 +613,7 @@ studenti hanno il tempo di discutere e confrontare i risultati degli esercizi
 svolti. Questo primo confronto coinvolge le prime due attività svolte. Dopo
 circa mezz’ora l’insegnante riunisce tutti gli alunni e chiede ad un
 rappresentante di ciascun gruppo di presentare quanto emerso.
-Si presume che la maggior parte degli studenti riescano ad interpretare i
+Si presume che la maggior parte degli studenti riesca ad interpretare i
 grafici in relazione al movimento della mano: due spostamenti uguali percorsi
 in intervalli di tempo di durata diversa corrispondono ad un movimento più
 rapido se il periodo di tempo è minore e più lento se è maggiore; osservazioni
@@ -652,7 +651,7 @@ chiede loro quale sia la differenza tra ciascun tratto. Alcuni studenti saranno
 in grado di rispondere che si tratta della pendenza, altri forse saranno più
 specifici e useranno il termine coefficiente angolare. Si ritiene possibile che
 qualche studente noti che l’espressione della velocità media appena incontrata
-corrisponda al coefficiente angolare di ciascun segmento; Altrimenti
+corrisponda al coefficiente angolare di ciascun segmento; altrimenti
 l’insegnante li guiderà in questo confronto.
 Dopo aver analizzato in profondità le prime due attività e aver dedotto il
 concetto di velocità media, si lavora sull’ultima attività proposta: la caduta
@@ -667,7 +666,7 @@ Successivamente si
 inizia un dialogo con il docente, riportando quanto osservato. La maggior parte
 dei gruppi dovrebbe concludere che la biglia impiega tempi simili a percorrere
 ciascun tratto, ovvero che tratti uguali vengono percorsi in tempi uguali.
-Grazie al lavoro precedente gli studenti possono affermare che la velocità
+Grazie al lavoro precedente, gli studenti possono affermare che la velocità
 media risulta essere uguale per ciascun tratto. Questa ipotesi è supportata sia
 dal fatto che il grafico spostamento-tempo mostra che tutti i segmenti disegnati
 hanno la stessa pendenza,
@@ -868,12 +867,12 @@ di dirigere la curiosità dei propri alunni sui moti accelerati.
 In questa fase il professore propone agli alunni diverse attività da svolgere a
 casa per arrivare alla comprensione dei concetti citati ad inizio Capitolo \ref{accelerazione}.
 
-\section{Moto di un Corpo su un Piano Inclinato}
+\subsection{Moto di un Corpo su un Piano Inclinato}
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Bicicletta/Skateboard/Pattini a Rotelle; Cronometro,
-Nastro adesivo, Bindella.
+Nastro Adesivo, Bindella.
 \end{itemize}
 
 Il professore chiede agli studenti di percorrere una rampa o
@@ -899,7 +898,7 @@ dell’esperimento, realizzato da lui stesso in precedenza
           \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/bicletta_rampa.mp4?raw=true}{questo indirizzo web}}.
          }.
 
-\section{Dal Moto al Grafico delle Velocità Medie}
+\subsection{Dal Moto al Grafico delle Velocità Medie}
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
 \item \textbf{Materiale:} Foglio, Righello
@@ -918,7 +917,7 @@ la natura di tale variazione.
 Il professore disegna alla lavagna un esempio del grafico che gli studenti
 dovranno ottenere e ascolta le domande degli studenti in merito.
 
-\section{Dal Moto al Grafico dello Spostamento in Funzione del Tempo}
+\subsection{Dal Moto al Grafico dello Spostamento in Funzione del Tempo}
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
@@ -933,14 +932,14 @@ chiarisce che la posizione di ciascun pezzo di nastro è
 ottenuta sommando le distanze percorse precedentemente e che i tempi
 corrispondenti sono a loro volta somma degli intervalli di tempo precedenti.
 Inoltre è richiesto di provare a collegare questi punti tra loro sul grafico,
-immaginando come si possa essere svolto il moto tra una misura è l'altra.
+immaginando come si possa essere svolto il moto tra una misura e l'altra.
 Il Professore non svela agli studenti come svolgere quest’ultima
 attività, in quanto desidera che essi riflettano sull'esperienza sensoriale
 provata durante l’esperimento, focalizzandosi sul moto in ciascun
 tratto e nel suo insieme.
 
-\section{Attività Bonus}
-Qualora l’insegnante la lezione si svolga in presenza, un'attività aggiuntiva da
+\subsection{Attività Bonus}
+Qualora la lezione si svolga in presenza, un'attività aggiuntiva da
 proporre potrebbe essere la caduta di un carrello lungo un piano inclinato
 alla cui base è presente un sensore di prossimità. Quest’ultimo è programmato
 per misurare con una certa frequenza lo spazio percorso.
@@ -1054,7 +1053,7 @@ s(t) = kt^2
 
 dove $k$ è ancora un parametro
 \footnote{
-          Non occorrelo studente arrivi ad ipotizzare un polinomio di secondo grado generico,
+          Non occorre che lo studente arrivi ad ipotizzare un polinomio di secondo grado generico,
           poiché il termine lineare e quello noto risultano nulli per le condizioni
           dell’attività svolta. Infatti, il corpo parte da fermo e si prende come origine
           la posizione di partenza.
@@ -1100,13 +1099,13 @@ Occorre che l’insegnante tracci il grafico della potenza
 quadratica con il software, poichè lo studente non ne ha una conoscenza
 pregressa.
 
-Ora occorre che il professore chieda agli studenti di fare di capire quale
+Ora occorre che il professore chieda agli studenti di capire quale
 possa essere il
 valore del coefficiente $k$ che meglio descriva i dati. Si ritiene che questa
 fase di ricerca sia utile agli studenti, per comprendere come si modifica il
 grafico al variare di tale parametro. Dopo alcune ipotesi, è il professore a
 mostrare la curva che meglio descrive l’andamento: la curva ottenuta fissando
-come $k$ al valore ricavato a partire dall’analisi dati.
+$k$ al valore ricavato a partire dall’analisi dati.
 
 Nell’ultima parte della lezione si desidera che gli studenti comprendano il
 significato fisico del parametro $k$ (a meno di una costante moltiplicativa).
@@ -1173,7 +1172,7 @@ In principio il docente presenta agli studenti l'app, mostrando loro dove
 reperirla e le sue funzioni, in particolare lo strumento di misura
 \emph{Acceleration (Whitout g)} (Figura \ref{fig:phyphox}) e la funzione
 \emph{Save experiment state}.
-L'insegnante dovrebbe mostrare un rapido ma efficave esempio pratico
+L'insegnante dovrebbe mostrare un rapido ma efficace esempio pratico
 di utilizzo di questo strumento, per esempio attivando la funzione
 di registrazione dati, lanciando in aria il telefono, riprendendolo
 al volo e mostrando il risultato agli studenti.
