Make some sections subsections (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -469,7 +469,7 @@ In questa fase il professore propone agli alunni diverse attività da svolgere a
 casa per arrivare a comprendere i concetti citati ad inizio Capitolo
 \ref{velocità}.
 
-\section{Dal Grafico al Moto}
+\subsection{Dal Grafico al Moto}
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
@@ -536,7 +536,7 @@ propria mano.
 \end{figure}
 
 
-\section{Dal Moto al Grafico}
+\subsection{Dal Moto al Grafico}
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
@@ -560,7 +560,7 @@ retta. Utilizzando un sensore di prossimità, è possibile controllare in
 tempo reale i movimenti degli studenti e appurare che il loro moto sia
 attinente a quello riportato nel grafico.
 
-\section{Velocità e Moto Rettilineo Uniforme}
+\subsection{Velocità e Moto Rettilineo Uniforme}
 
 \begin{itemize}
 \item \textbf{Tempo richiesto in aula:} 30\textsuperscript{$\prime$}
