Add test for students (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -1311,6 +1311,120 @@ utilizzare per le attività cinestetiche.
   \label{tab:fit_bike}
 \end{table}
 
+\chapter{Prova per gli Studenti}
+﻿Nome:\hspace{25mm} Cognome:\hspace{20mm} Classe:\hspace{12mm} Data:
+
+\vspace{5mm}
+
+\noindent Punteggio totale:\hspace{17mm} /100\hspace{20mm} Voto:\hspace{15mm}
+Durata: 2 h
+
+\vspace{10mm}
+
+\noindent \textbf{VERIFICA DI FISICA - INTRODUZIONE ALLA CINEMATICA}
+
+\vspace{5mm}
+
+\noindent\textbf{Esercizio 1} \hfill \textbf{[40 punti]}
+
+\begin{enumerate}
+\item Interpreta i seguenti grafici
+\footnote{Per il docente: i grafici hanno punteggi diversi a seconda della
+complessità. In questo caso si ritiene ragionevole assegnare 3 punti per il
+primo, 5 per il secondo e 7 per il terzo.
+}
+che riportano lo spostamento di un corpo al
+passare del tempo, aiutandoti con il movimento della mano lungo il bordo del
+tavolo. Quest’ultimo rappresenta la linea retta su cui si sviluppa il moto.
+Descrivi i movimenti compiuti, focalizzando l’attenzione su eventuali
+rallentamenti, pause, cambi di direzione, etc.\\
+\textbf{Suggerimento:} considerare il centro del bordo del tavolo come posizione zero
+così che a destra di questo riferimento vi siano le posizioni con valori
+positivi e a sinistra negativi. \hfill \textbf{[15 punti]}
+
+\begin{figure}[H]
+\centering
+  \begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{test_images/image1}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{test_images/image2}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{test_images/image3}
+  \end{subfigure}
+\end{figure}
+
+\item Definisci cosa si intende con il termine \emph{velocità media} e come si
+ricava a partire da un grafico analogo ai precedenti (se ti è utile, descrivi
+prendendo in considerazione uno tra quelli assegnati). \hfill \textbf{[10 punti]}
+\item Considera le velocità medie per ciascun tratto dei grafici e confrontale
+(qualitativamente) tra loro: in quale tratto la velocità media è massima? E
+minima? Perché? \hfill \textbf{[5 punti]}
+\item I moti descritti possono essere considerati moti rettilinei uniformi?\\
+Perché? \hfill \textbf{[7 punti]}
+\item Fai un esempio di moto rettilineo uniforme incontrato a lezione. \textbf{[3 punti]}
+\end{enumerate}
+
+\vspace{10mm}
+
+\noindent\textbf{Esercizio 2} \hfill \textbf{[20 punti]}
+
+\noindent Due macchine A e B stanno viaggiando lungo la stessa autostrada. A si trova in
+posizione $s = 2.4\, km$ all’istante di tempo $t = 0\, s$ e mantiene una velocità
+uniforme pari a $36\, km/h$. B invece si trova in posizione $s = 0\, km$ a $t = 30$ minuti e
+mantiene una velocità uniforme pari a $50\, km/h$.
+
+\begin{enumerate}
+\item Disegna i grafici dei due moti sullo stesso diagramma \emph{spostamento-tempo}
+(analogo a quelli dell’esercizio 1). \hfill \textbf{[10 punti]}
+\item Si incontreranno le due macchine? Se sì, dove e quando? Risolvi sia
+osservando i grafici che utilizzando la legge oraria del moto rettilineo
+uniforme incontrata in classe. \hfill \textbf{[10 punti]}
+\end{enumerate}
+
+\vspace{10mm}
+
+\noindent\textbf{Esercizio 3} \hfill \textbf{[30 punti]}
+
+\noindent Descrivi l’attività della bicicletta (skateboard/monopattino) lungo una
+discesa che è stata svolta a casa e commentata in classe. Focalizza l’attenzione sia sulla
+realizzazione pratica che sui grafici discussi in classe. Questi ultimi
+riportali in modo qualitativo di seguito e spiega che cosa rappresentano e che
+informazioni utili ti danno.
+
+\pagebreak
+
+\noindent\textbf{Esercizio Bonus}
+\footnote{Questo esercizio viene considerato solo se si è raggiunta la sufficienza nei
+precedenti.} \hfill \textbf{[10 punti]}
+
+\noindent Il grafico mostra il moto di due palline A e B che rotolano una di fianco
+all’altra.
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=0.3\textwidth]{test_images/image4}
+\end{figure}
+
+\begin{enumerate}
+\item Segna sull’asse del tempo eventuali punti ($t_a$) dove le due palline si\\
+superano a vicenda. \hfill  \textbf{[2 punti]}
+\item Determina quale pallina si muove più velocemente all’istante di tempo $t_b$.
+
+\hfill \textbf{[3 punti]}
+\item Segna eventuali istanti di tempo dove le due palline hanno la stessa\\
+velocità. \hfill \textbf{[3 punti]}
+\item Nell’intervallo di tempo mostrato nel grafico, la palla B sta: \hfill \textbf{[2 punti]}
+\begin{itemize}
+\item \emph{speeding up} tutto il tempo
+\item rallentando tutto il tempo
+\item \emph{speeding up} una parte del tempo e rallentando un’altra
+\end{itemize}
+\end{enumerate}
+
+
+
 % Articoli non citati nel testo ma consultati
 \nocite{trowbridge1980investigation}
 \nocite{bernardini2012thinking}
