Add notice for test in evaluate (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -383,6 +383,9 @@ gli assi, chiamati \emph{coordinate cartesiane} tridimensionali.
 Per la valutazione di questo primo modulo del percorso il docente tiene conto della
 partecipazione degli studenti alle varie attività proposte, del lavoro svolto sui
 grafici richiesti e del loro coinvolgimento attivo all’interno dei gruppi di discussione.
+Si terrà conto anche di una prova scritta da sottoporre agli
+studenti alla fine del percorso
+(si veda l'Appendice \ref{appendix_test}).
 
 \chapter{Velocità, Moto Rettilineo Uniforme}\label{velocità}
 In questa fase lo studente verrà guidato alla comprensione del concetto di
@@ -819,6 +822,9 @@ Per la valutazione di questo secondo modulo del percorso il docente tiene conto 
 partecipazione degli studenti alle varie attività proposte a casa e in classe,
 del lavoro svolto sui grafici e i video richiesti, e del loro coinvolgimento attivo
 all’interno dei gruppi di discussione.
+Si terrà conto anche di una prova scritta da sottoporre agli
+studenti alla fine del percorso
+(si veda l'Appendice \ref{appendix_test}).
 
 \chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}\label{accelerazione}
 Nel presente modulo lo studente familiarizza con il concetto di accelerazione
@@ -1240,6 +1246,9 @@ Per la valutazione di questo terzo modulo del percorso il docente tiene conto
 dell'impegno impiegato nello svolgere le attività assegnate come compiti a casa,
 del lavoro svolto sui grafici e sull'esperimento, e del coinvolgimento attivo
 all’interno dei gruppi di discussione.
+Si terrà conto anche di una prova scritta da sottoporre agli
+studenti alla fine del percorso
+(si veda l'Appendice \ref{appendix_test}).
 
 \appendix
 \chapter{Grafici per le Attività Cinestetiche}\label{appendix_kine}
@@ -1311,7 +1320,7 @@ utilizzare per le attività cinestetiche.
   \label{tab:fit_bike}
 \end{table}
 
-\chapter{Prova per gli Studenti}
+\chapter{Prova per gli Studenti}\label{appendix_test}
 ﻿Nome:\hspace{25mm} Cognome:\hspace{20mm} Classe:\hspace{12mm} Data:
 
 \vspace{5mm}
