Add title (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -15,7 +15,11 @@
 
 \addto\captionsitalian{\renewcommand{\bibname}{Riferimenti}}
 
-\title{Title} \author{Daniele Melocchi\\Agnese Montanaro\\Matteo
+\title{
+Batti il 5E, Cinematica!\\
+\large Percorso Didattico Introduttivo alle Basi della Cinematica
+}
+\author{Daniele Melocchi\\Agnese Montanaro\\Matteo
 Savatteri}
 
 \begin{document}
